--- a/blogs/blog-style.css
+++ b/blogs/blog-style.css
@@ -41,6 +41,10 @@ div.carousel2{
     border: solid 2px;
     border-radius: 20px;
 }
+a:link {
+    color:black;
+    text-decoration: none;
+}
 .carousel2 img{
     width: 40%;
     border-radius: 20px 0 0 20px;
