--- a/blogs/blog-style.css
+++ b/blogs/blog-style.css
@@ -27,12 +27,12 @@
     display: flex;
     flex-direction: column;
     padding:10px;
-    border: solid 2px;
     margin: 10px;
     align-items: center;
 }
 li img{
     width: 90%;
+    border-radius:10px;
 }
 div.carousel2{
     display: flex;
@@ -41,7 +41,7 @@ div.carousel2{
     border: solid 2px;
     border-radius: 20px;
 }
-a:link {
+a:link, a:visited {
     color:black;
     text-decoration: none;
 }
@@ -65,9 +65,21 @@ a:link {
     padding:10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
+.content2{
+    margin:20px;
+    padding:10px;
+}
+
 .top-image{
     width:70%;
+}
+.content2 ol > li{
+    font-weight: 900;
+}
+.content2 ol ul{
+    list-style-type: disc;
+    padding-left:20px;
 }
