--- a/blogs/blog-style.css
+++ b/blogs/blog-style.css
@@ -68,18 +68,45 @@ a:link, a:visited {
     align-items: center;
     justify-content: center;
 }
+.content1 h1{
+    font-size: 48px;
+
+}
+.content1 p{
+    font-size:18px;
+    font-weight: 500;
+}
 .content2{
     margin:20px;
-    padding:10px;
+    padding:10px 20px;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .top-image{
     width:70%;
+    margin:20px;
 }
 .content2 ol > li{
     font-weight: 900;
+    font-size:20px;
+    letter-spacing: 1px;
+    padding:5px 0 5px 0;
 }
 .content2 ol ul{
     list-style-type: disc;
     padding-left:20px;
+   
+}
+.content2 h3{
+    font-size: 36px;
+    color:red;
+    padding:5px 0 5px 0;
+    margin:10px 0 10px 0;
+    border-bottom: solid 2px;
+    border-radius: 5px;
+}
+.content2 p.last{
+    margin-top:10px;
+    font-weight: 600;
 }
