today's work done

--- a/blogs/blog-style.css
+++ b/blogs/blog-style.css
@@ -110,3 +110,9 @@ a:link, a:visited {
     margin-top:10px;
     font-weight: 600;
 }
+p.last a:link{
+    color:blue;
+}
+p.last a:visited{
+    color:blue;
+}
