--- a/blogs/blog-style.css
+++ b/blogs/blog-style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald|Roboto|Slabo+27px);
+@import 'bourbon';
 .hero{
     display:flex;
     flex-direction: column;
@@ -29,17 +31,32 @@
     padding:10px;
     margin: 10px;
     align-items: center;
+    cursor:pointer;
+    transition: transform 0.3s ease;
 }
-li img{
+.cards ul li:hover{
+    transform:scale(1.05);
+}
+.cards li span{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top:5px;
+    letter-spacing: 1px;
+}
+.cards li img{
     width: 90%;
     border-radius:10px;
 }
 div.carousel2{
     display: flex;
     flex-direction: row;
-    margin: 10px;
+    margin: 20px 10px;
     border: solid 2px;
     border-radius: 20px;
+    transition:transform 0.3s ease;
+}
+div.carousel2:hover{
+    transform:scale(1.05);
 }
 a:link, a:visited {
     color:black;
@@ -58,6 +75,53 @@ a:link, a:visited {
 .carousel2 .text #xd{
     letter-spacing: 1px;
 }
+
+/* card section*/
+.blog-wrapper{
+    display:flex;
+    justify-content: space-between;
+    gap:20px;
+    align-items: center;
+    margin-top:40px;
+}
+.blog-card{
+    border:solid 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align:center;
+    border-radius:10px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    width:100%;
+    height:480px;
+}
+.blog-card:hover{
+    transform:scale(1.05);
+}
+.blog-card img{
+    width:100%;
+    border-radius: 10px 10px 0 0 ;
+}
+.blog-card h3{
+    font-size: 24px;
+}
+.blog-card .card-text{
+    padding:15px 20px;
+}
+.card-text p{
+    text-align: justify;
+}
+.card-text .info ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    opacity: 0.8;
+    padding:0 10px 10px 10px;
+    font-size: 90%;
+}
+/***/
 
 /** On blog page **/
 .content1{
@@ -109,6 +173,13 @@ a:link, a:visited {
 .content2 p.last{
     margin-top:10px;
     font-weight: 600;
+}
+
+p.last{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center !important;
 }
 p.last a:link{
     color:blue;
