--- a/styles.css
+++ b/styles.css
@@ -3,45 +3,61 @@
 *{
     margin:0;
     padding:0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 body{
     background-color: rgb(209, 207, 204);
 }
 /* navbar section starts from here */
 .navbar{
-    background-color: antiquewhite;
+    background-color: rgb(48, 9, 9);
     display: flex;
     justify-content: space-between;
     padding:12px 39px;
     align-items: center;
     position: sticky;
+    box-shadow: rgba(0, 0, 0, 0.356) 0 2px 5px;
 }
 .logo{
     font-size: 24px;
-    color:rgb(34, 12, 1);
+    color:antiquewhite;
     font-weight: bold;
 }
-.nav-links a{
-    padding: 0 20px;
-    text-decoration: none;
+.nav-links ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+.nav-links li{
+    padding:10px 18px;
+    transition: transform 0.2s ease;
     font-size: 20px;
-    color:rgb(48, 9, 9);
-    font-weight: bold;
 }
+.nav-links li a{
+    text-decoration: none;
+    color:antiquewhite;
+}
+
+
 .btn-1{
     font-size: 20px;
-    color:rgb(48, 9, 9);
+    color:antiquewhite;
     font-weight: bold;
     border: solid 2px;
     padding: 10px;
     border-radius: 10px;
 }
-.nav-links .active{
-    background-color: rgb(48, 9, 9);
-    color:antiquewhite;
-    padding:18px;
+.nav-links li .active {
+    background-color: antiquewhite;
+    color:rgb(48, 9, 9);
+    padding:10px 18px;
     border-radius: 10px;
 }
+.nav-links ul li:hover{
+    transform: scale(1.15);
+}
+
 /* hero section */
 .hero{
     border-bottom:solid 5px;
@@ -60,6 +76,9 @@ body{
     width:50%;
     float:right;
     border-radius: 24px;
+}
+.hero .text h1{
+    font-size:72px;
 }
 .text ul, .main ul, .services ul{
     list-style-type: none;
@@ -106,21 +125,26 @@ body{
     flex-direction:row;
     justify-content:space-between;
     align-items: baseline;
-    border-bottom: solid 2px;
-    border-radius: 10px;
+    margin-top: 10px;
 }
 .services-list ul li{
     margin:10px;
     text-align: center;
-    
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding:10px;
+    cursor:pointer;
+    transition: transform 0.3s ease;;
+    width:100%;
+    height:100%;
+}
+.services-list ul li:hover{
+    transform:scale(1.05);
 }
 .services-list ul img{
-    width:90%;
+    width:100%;
     border-radius: 10px;
 }
-.freelancing img{
-    width:100%;
-}
+
 .freelancing{
     justify-content: center;
     margin: 10px 0;
